<resources>
    <string name="app_name">RawgGameApp</string>
    <string name="title_discover_games">Discover games</string>
    <string name="title_settings">Settings</string>

    <string name="onboarding_continue_button_text">continue</string>
    <string name="genre_selection_label">select your favourites</string>
    <string name="genre_selection_message">If none selected all genres will be shown</string>

    <string name="genre_details_number_of_games_label">Number of Games</string>
    <string name="genre_details_example_games_label">Some Games In This Genre</string>

    <string name="discover_games_label">discover games</string>

    <string name="game_details_metacritic_no_score">N/A</string>
    <string name="game_details_genres_label">Genres</string>
    <string name="game_details_platforms_label">Platforms</string>
    <string name="game_details_release_date_label">Release Date</string>
    <string name="game_details_developer_label">Developer</string>
    <string name="game_details_esrb_rating_label">ESRB</string>
    <string name="game_details_publisher_label">Publisher</string>

    <string name="badge_explanation_title_hot_game">HOT GAME</string>
    <string name="badge_explanation_message_hot_game">When game is hot, it means that it is currently being played by significant number of people who own it!</string>
    <string name="badge_explanation_title_challenging_game">CHALLENGING GAME</string>
    <string name="badge_explanation_message_challenging_game">Challenging game means that this game was beaten by only 3% of people who own it!</string>
    <string name="badge_explanation_ok">OK</string>
</resources>