<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.gamedetails.GameDetailsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/selection_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivGameDetailsImage"
                android:layout_width="wrap_content"
                android:layout_height="240dp"
                tools:src="@drawable/ic_arrow_down"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop"
                android:foreground="@drawable/bg_bottom_shadow"/>

            <ImageView
                android:id="@+id/ivGameDetailsBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back_arrow"
                android:background="@drawable/bg_game_details_back_arrow"
                app:layout_constraintTop_toTopOf="@+id/ivGameDetailsImage"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:padding="8dp"/>

            <ImageView
                android:id="@+id/ivGameDetailsHot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fire"
                app:layout_constraintBottom_toBottomOf="@+id/ivGameDetailsImage"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_marginBottom="4dp"
                android:padding="4dp"/>

            <ImageView
                android:id="@+id/ivGameDetailsChallenging"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_flag"
                app:layout_constraintBottom_toBottomOf="@+id/ivGameDetailsImage"
                app:layout_constraintStart_toEndOf="@+id/ivGameDetailsHot"
                android:layout_marginStart="16dp"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_marginBottom="8dp"
                android:padding="4dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="200dp"
            android:paddingTop="24dp"
            android:paddingHorizontal="16dp">

            <LinearLayout
                android:id="@+id/tvGameDetailsMetacriticContainer"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constrainedWidth="true"
                tools:background="@drawable/bg_rounded_score_high"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/tvGameDetailsMetacritic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/sf_compact_bold_text"
                    android:gravity="center"
                    android:textSize="22sp"
                    app:layout_constrainedWidth="true"
                    tools:text="100"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tvGameDetailsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="grand theft auto v"
                app:layout_constraintTop_toTopOf="@id/tvGameDetailsMetacriticContainer"
                app:layout_constraintStart_toEndOf="@id/tvGameDetailsMetacriticContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tvGameDetailsMetacriticContainer"
                app:layout_constrainedWidth="true"
                android:layout_marginStart="12dp"
                android:maxLines="2"
                android:textSize="32sp"
                android:fontFamily="@font/dirtyline_36daysoftype_2022"
                app:layout_constraintHorizontal_bias="0"
                android:includeFontPadding="true"/>

            <com.borjabravo.readmoretextview.ReadMoreTextView
                android:id="@+id/tvGameDetailsDescription"
                app:layout_constraintTop_toBottomOf="@+id/tvGameDetailsTitle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Description"
                android:textSize="16sp"
                app:trimExpandedText="Show less"
                app:trimCollapsedText="Read more"
                app:trimMode="trimModeLength"
                app:trimLength="175"
                app:colorClickableText="?attr/colorReadMore"/>

            <TextView
                android:id="@+id/tvGameDetailsGenresLabel"
                style="@style/InfoLabel"
                android:text="@string/game_details_genres_label"
                app:layout_constraintTop_toBottomOf="@id/tvGameDetailsDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constrainedWidth="true"
                android:layout_marginTop="24dp"/>

            <HorizontalScrollView
                android:id="@+id/hsvGameDetailsGenres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvGameDetailsGenresLabel"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingVertical="8dp"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/shapeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvGameDetailsGenre1"
                        style="@style/GameGenreChip"
                        android:visibility="gone"
                        tools:visibility="visible"/>
                    <TextView
                        android:id="@+id/tvGameDetailsGenre2"
                        style="@style/GameGenreChip"
                        android:layout_marginStart="4dp"
                        android:visibility="gone"
                        tools:visibility="visible"/>

                    <TextView
                        android:id="@+id/tvGameDetailsGenre3"
                        style="@style/GameGenreChip"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="8dp"
                        android:visibility="gone"
                        tools:visibility="visible"/>
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/tvGameDetailsPlatformsLabel"
                style="@style/InfoLabel"
                android:text="@string/game_details_platforms_label"
                app:layout_constraintTop_toBottomOf="@id/hsvGameDetailsGenres"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constrainedWidth="true"
                android:layout_marginTop="24dp"/>

            <TextView
                android:id="@+id/tvGameDetailsPlatforms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="PlayStation 5, Xbox Series S/X, PlayStation 4, PC, PlayStation 3, Xbox 360, Xbox One"
                app:layout_constraintTop_toBottomOf="@id/tvGameDetailsPlatformsLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constrainedWidth="true"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

            <LinearLayout
                android:id="@+id/infoLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvGameDetailsPlatforms"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constrainedWidth="true"
                android:layout_marginTop="24dp"
                android:layout_centerHorizontal="true"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/dateAndDeveloperLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tvGameDetailsReleaseDateLabel"
                        style="@style/InfoLabel"
                        android:text="@string/game_details_release_date_label"/>

                    <TextView
                        android:id="@+id/tvGameDetailsReleaseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Sep 17, 2013"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/tvGameDetailsDevelopersLabel"
                        style="@style/InfoLabel"
                        android:text="@string/game_details_developer_label"
                        android:layout_marginTop="24dp"/>

                    <TextView
                        android:id="@+id/tvGameDetailsDevelopers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Rockstar Games, Rockstar North"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/esrbRatingAndPublisherLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tvGameDetailsEsrbRatingLabel"
                        style="@style/InfoLabel"
                        android:text="@string/game_details_esrb_rating_label"/>

                    <TextView
                        android:id="@+id/tvGameDetailsEsrbRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Sep 17, 2013"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/tvGameDetailsPublishersLabel"
                        style="@style/InfoLabel"
                        android:text="@string/game_details_publisher_label"
                        android:layout_marginTop="24dp"/>

                    <TextView
                        android:id="@+id/tvGameDetailsPublishers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Rockstar Games, Rockstar North"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"/>
                </LinearLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGameDetailsScreenshots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                app:layout_constraintTop_toBottomOf="@+id/infoLayout"
                app:layout_constraintStart_toStartOf="parent"
                tools:listitem="@layout/item_screenshot"
                android:layout_marginTop="24dp"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:orientation="horizontal"/>

            <ImageView
                android:id="@+id/ivGameDetailsWebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_website"
                app:layout_constraintTop_toBottomOf="@+id/rvGameDetailsScreenshots"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="40dp"/>

            <TextView
                android:id="@+id/tvGameDetailsWebsite"
                style="@style/Hyperlink"
                app:layout_constraintTop_toTopOf="@id/ivGameDetailsWebsite"
                app:layout_constraintStart_toEndOf="@id/ivGameDetailsWebsite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/ivGameDetailsWebsite"
                app:layout_constrainedWidth="true"
                app:layout_constraintHorizontal_bias="0"
                android:layout_marginStart="12dp"/>

            <ImageView
                android:id="@+id/ivGameDetailsReddit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_reddit"
                app:layout_constraintTop_toBottomOf="@+id/tvGameDetailsWebsite"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/tvGameDetailsReddit"
                style="@style/Hyperlink"
                app:layout_constraintTop_toTopOf="@id/ivGameDetailsReddit"
                app:layout_constraintStart_toEndOf="@id/ivGameDetailsReddit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/ivGameDetailsReddit"
                app:layout_constrainedWidth="true"
                app:layout_constraintHorizontal_bias="0"
                android:layout_marginStart="12dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>